@@ -35,21 +35,6 @@ from qtpy import QtCore
 
 import vitables.utils
 
-_ENUM_DTYPE = np.dtype('S32')
-
-
-def get_enum_column_description(data_source):
-    """Return the dictionary which maps column index to enum dict."""
-    if not isinstance(data_source, tables.Table):
-        return {}
-    enum_columns = {}
-    for _, column_description in data_source.coldescrs.items():
-        if not isinstance(column_description, tables.EnumCol):
-            continue
-        enum_columns[column_description._v_pos] = \
-            {value: name for name, value in column_description.enum}
-    return enum_columns
-
 
 class LeafModel(QtCore.QAbstractTableModel):
     """
@@ -109,7 +94,6 @@ class LeafModel(QtCore.QAbstractTableModel):
         #
 
         self.formatContent = vitables.utils.formatArrayContent
-        self._enum_columns_desc = get_enum_column_description(self.data_source)
 
         # Time series (if they are found) are formatted transparently
         # via the time_series.py plugin
@@ -176,26 +160,17 @@ class LeafModel(QtCore.QAbstractTableModel):
         - `role`: the role being returned
         """
 
-        if not index.isValid() \
-           or not (0 <= index.row() < self.numrows):
+        if not index.isValid() or not (0 <= index.row() < self.numrows):
             return None
         cell = self.rbuffer.getCell(self.rbuffer.start + index.row(),
                                     index.column())
-        if index.column() in self._enum_columns_desc:
-            if isinstance(cell, collections.Iterable):
-                cell = np.array([
-                    _ENUM_DTYPE.type(
-                        self._enum_columns_desc[index.column()].get(c, c))
-                    for c in cell])
-            else:
-                cell = _ENUM_DTYPE.type(
-                    self._enum_columns_desc[index.column()].get(cell, cell))
         if role == QtCore.Qt.DisplayRole:
             return self.formatContent(cell)
         elif role == QtCore.Qt.TextAlignmentRole:
-            return int(QtCore.Qt.AlignLeft | QtCore.Qt.AlignTop)
+            return int(QtCore.Qt.AlignLeft|QtCore.Qt.AlignTop)
         else:
             return None
+
 
     def columnCount(self, index=QtCore.QModelIndex()):
         """The number of columns of the given model index.
